[package]
name = "roughstamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roughenough = "1.2.0-draft5"
byteorder = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ring = "0.16"
data-encoding = "2.3"

# ctrlc = { version = "3.2", features = ["termination"] }
#humansize = "1"
# log = "0.4"
# mio = "0.6"
# mio-extras = "2.0"
# rand = "0.6"
# simple_logger = "1"
# yaml-rust = "0.4"
# zeroize = "1.4"
